--- a/demo.html
+++ b/demo.html
@@ -8,6 +8,7 @@ layout: default
 <!-- /.row -->
 <div class="row">
     <div class="col-lg-12">
+        <p>An <a href="{{ site.baseurl | append: "/sl_prove" }}">entailment prover</a> for a fragment of first-order logic with inductive definitions. Only <a href="https://github.com/ngorogiannis/cyclist/blob/master/examples/sl.defs" target="_blank">these definitions</a> can be used in the demo.</p>
         <div class="panel panel-default">
             <div class="panel-heading">
                 Demo
